<resources>
    <string name="app_name">ACalculator</string>
    <string name="back">DEL</string>
    <string name="delete">C</string>
    <string name="history">H</string>


    <!-- Drawer-->
    <string name="loginD">Login</string>
    <string name="calculatorD">Calculadora</string>
    <string name="historyD">Historico</string>
    <string name="otherD">Outros</string>
    <string name="outD">Sair</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registoD">Registo</string>

</resources>