<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_visor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="textEnd"
        android:padding="16dp"
        android:textSize="40sp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/button_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"/>
        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            />
        <Button
            android:id="@+id/button_H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"/>
        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:onClick="onClickSymbol"
            android:tag="/"
            android:layout_weight="1"
            android:backgroundTint="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"
            android:onClick="onClickSymbol"
            android:tag="7"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:onClick="onClickSymbol"
            android:tag="8"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9"
            android:onClick="onClickSymbol"
            android:tag="9"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:onClick="onClickSymbol"
            android:tag="*"
            android:layout_weight="1"
            android:backgroundTint="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:onClick="onClickSymbol"
            android:tag="4"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:onClick="onClickSymbol"
            android:tag="5"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:onClick="onClickSymbol"
            android:tag="6"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:onClick="onClickSymbol"
            android:tag="-"
            android:layout_weight="1"
            android:backgroundTint="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:onClick="onClickSymbol"
            android:tag="1"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:onClick="onClickSymbol"
            android:tag="2"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:onClick="onClickSymbol"
            android:tag="3"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_adition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:onClick="onClickSymbol"
            android:tag="+"
            android:layout_weight="1"
            android:backgroundTint="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4">

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:onClick="onClickSymbol"
            android:tag="0"
            android:layout_weight="1"
            android:textStyle="bold"
            android:backgroundTint="@color/purple_700"/>
        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:onClick="onClickSymbol"
            android:tag="."
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"/>
        <Button
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="="
            android:layout_weight="2"
            android:backgroundTint="@color/teal_700"
            />


    </LinearLayout>



</LinearLayout>